updated er info

--- a/_posts/2021-10-16-#03.md
+++ b/_posts/2021-10-16-#03.md
@@ -36,10 +36,11 @@ After we’ve done that, we had some time left and decided to design an entity r
 
 Our Database will consist of four tables:
 
-- USER: obvious data aside, here is stored, whether a user account is confirmed via an DHBW-email address, the password hash and the unique RFID card ID if the user decides to link their student ID to the account.
+- USER: This is the place where we store all of our users regardless of whether they verified their email or not. Once they verified their email, the next table comes into play.
+- USER_DATA: Stores all the obvious data: name, course, location, ...
 - TAG: In this table, we will store every skilltag one user gives oneself.
-- TAG-VALIDATION: This table will store comments that users can write to either approve or reject the skills that other users give themselves.
-- DHBW: Contains just the unique email domain for every DHBW. E.g. @student.dhbw-karlsruhe.de
+- TAG_VALIDATION: This table will store comments that users can write to either approve or reject the skills that other users give themselves.
+- DHBW_DOMAINS: Contains just the valid email domains for every DHBW. E.g. @student.dhbw-karlsruhe.de for Karlsruhe
 - CONTACT: Will store contact relations between users
 
 Lastly, we realized the database with Azure. Luckily every student receives a balance of 100$ and is able to setup many servers free of charge during their study.
