--- a/_posts/2021-11-20-#07.md
+++ b/_posts/2021-11-20-#07.md
@@ -25,6 +25,6 @@ However, the class diagram might change in the future, because we didn't impleme
 
 Our data base scheme was already shown in [blog post 03](https://dhbw-experts.github.io/blog/03/). If you haven't read it already, be sure to check this blog post in order to get all the details about our ER-Diagram. If you still have any questions or improvement suggestions, let us know!
 
-![ER-Diagram](/assets/images/ER-Diagram.jpg)
+![ER-Diagram](https://github.com/DHBW-Experts/documents/blob/main/ER-Diagram.jpg)
 
 Thank you for any feedback, c ya next week!
