--- a/_posts/2022-04-26-#2.3.md
+++ b/_posts/2022-04-26-#2.3.md
@@ -24,15 +24,13 @@ The calculation is based on the following parameters:
 
 Instead of performing the calculation manually we used the following calculator to determine the function points: [link](http://groups.umd.umich.edu/cis/course.des/cis525/js/f00/harvey/FP_Calc.html?tCountVal=0#FPCalc) 
 
-{% raw %}
-<iframe style="width: 100%; height: 450px;" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSSsadckaVqBLdA9DZbGnziP3yyenmTxh2J9b9lrnEbPYt2yJf_EFk9fl1_9rXvPNPPQMXdvGOh92Gj/pubhtml?widget=true&amp;headers=false"></iframe>
-{% endraw %}
+![Table](https://raw.githubusercontent.com/DHBW-Experts/documents/main/FunctionPointCalculation/FP-Table-3rd-Semester.png)
 
 ![Use-Cases](https://raw.githubusercontent.com/DHBW-Experts/documents/main/UseCases/UseCase-Diagram.jpg)
 
 After we calculated the function points for every use case, we determined if our estimation correlates with the actual time, we spent to implement our Use-Cases in the last semester. To picture the connection, we used a scatter plot with points for every Use-Case of the 3rd Semester.
 
-![Graph](https://raw.githubusercontent.com/DHBW-Experts/documents/main/UseCases/FunctionPointsVsTimeSpent.png)
+![Graph](https://raw.githubusercontent.com/DHBW-Experts/documents/main/FunctionPointCalculation/FP-Graph-3rd-Semester.png)
 
 As you can see in the graph, the time we spent on every Use-Case more ore less correlates with the estimation we made. Only the register-Use-Case is estimated way to high. The reason for that is that we only implemented a temporary registering solution last semester. As we start to implement our real registering solution this semester, the Use-Case will move farther to the right and start to correlate with out estimation.
 With the help of some Excel magic we calculated the following metrics for our project:
@@ -41,5 +39,9 @@ With the help of some Excel magic we calculated the following metrics for our pr
 - Every FP corresponds to 1.1 hours of work 
 
 Disclaimer: There is no time spent on the delete-User-Use-Case as the admins can delete Users by removing their entry on the database.
+
+## Postscript
+
+Click [here](https://github.com/DHBW-Experts/documents/tree/main/FunctionPointCalculation) to see the final versions of our function point calculation after the 4th semester.
 
 
