remove google docs links, replaced with links to github document repo

--- a/_posts/2022-06-22-#2.10.md
+++ b/_posts/2022-06-22-#2.10.md
@@ -67,7 +67,7 @@ in the following, you will find all the important links about our project. If th
 
 ## Quality
 
-- [Risk management](https://docs.google.com/spreadsheets/d/1falTIQkIQSTLZd_tVhuxKRq68DcY8aF4oG557i4VYQY/edit#gid=0)
+- [Risk management](https://github.com/DHBW-Experts/documents/blob/main/Risk%20Management%20DHBW%20EXPERTS%20-%20Tabellenblatt1.pdf)
 - Design pattern can be found in the coresponding blogpost
 
 ## Blog posts
@@ -100,8 +100,8 @@ in the following, you will find all the important links about our project. If th
 
 ## Presentations
 
-- [Midterm presentation](https://docs.google.com/presentation/d/1XqeR1_1xZJL9f-D52ULX5Xmwo--IXY-aeFDyPZs23xo/edit#slide=id.g107339c718f_0_5)
-- [Final Presentation](https://docs.google.com/presentation/d/1392irL-dkMsJL6hY0ppMv6znGkSTs-p931ir0OAq9So/edit#slide=id.g134a109f706_0_23513)
+- [Midterm presentation](https://github.com/DHBW-Experts/documents/blob/main/SE%20Midterm.pdf)
+- [Final Presentation](https://github.com/DHBW-Experts/documents/blob/main/SE%20Final.pdf)
 
 ## "Archive"
 
