--- a/_posts/2022-06-22-#2.10.md
+++ b/_posts/2022-06-22-#2.10.md
@@ -17,8 +17,7 @@ in the following, you will find all the important links about our project. If th
 - [App](https://github.com/DHBW-Experts/app)
 - [Documents](https://github.com/DHBW-Experts/documents)
 - [Blog](https://github.com/DHBW-Experts/dhbw-experts.github.io)
-- [FP Points Documents](https://docs.google.com/spreadsheets/d/1T2VsLOnN02maV4aqMGr4TDLnyJXDZ0cdsshPNnPgkPU/edit#gid=0) ![Function Point Graph](/assets/images/FP.png)
-- TODO provide password
+- [FP Points Documents](https://github.com/DHBW-Experts/documents/tree/main/FunctionPointCalculation)
 
 ## Youtrack
 
