--- a/_posts/2022-06-22-#2.10.md
+++ b/_posts/2022-06-22-#2.10.md
@@ -104,9 +104,10 @@ in the following, you will find all the important links about our project. If th
 
 ## "Archive"
 
-TODO **alles** als zip ordner bereitstellen (source code, blog, etc)
+[Google Drive Archive](https://drive.google.com/drive/folders/1YIZqrBzpMFeztTPMxSEMgUvcF-KAA2ar?usp=sharing)
 
 ## Screencast of the application
 
-- _TO DO_
-  ![alt text](https://github.com/DHBW-Experts/documents/blob/main/UI/App-Screencast.gif?raw=true)
+{% raw %}
+<iframe width="560" height="315" src="https://www.youtube.com/embed/px6yWGCGRJs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+{% endraw %}
