--- a/_posts/2022-06-22-#2.10.md
+++ b/_posts/2022-06-22-#2.10.md
@@ -24,7 +24,10 @@ in the following, you will find all the important links about our project. If th
 - [Dashboard](https://dhbw-karlsruhe.myjetbrains.com/youtrack/projects/a083958c-208a-4101-ae18-0a908553b15d)
 - [Sprint board](https://dhbw-karlsruhe.myjetbrains.com/youtrack/agiles/108-114/current)
 - Time spent per user:
-  ![Time spent per user](/assets/images/time_spent_per_user.PNG) -[Burndown](https://dhbw-karlsruhe.myjetbrains.com/youtrack/reports/burndown/147-352) (more burndown charts can be found on our Youtrack dashboard)
+
+ ![Time spent per user](/assets/images/time_spent_per_user.PNG)
+ 
+ - [Burndown](https://dhbw-karlsruhe.myjetbrains.com/youtrack/reports/burndown/147-352) (more burndown charts can be found on our Youtrack dashboard)
 
 ## Other Tools
 
